# grpc-java

./: build.gradle  settings.gradle
android/: build.gradle
android-interop-testing/: build.gradle  run-instrumented-tests-on-firebase.sh
android-interop-testing/app/: build.gradle
android-interop-testing/app/src/main/: AndroidManifest.xml
android-interop-testing/app/src/main/res/layout/: activity_tester.xml
android-interop-testing/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/io/grpc/android/: AndroidChannelBuilder.java
android/src/test/java/io/grpc/android/: AndroidChannelBuilderTest.java
api/src/main/java/io/grpc/: ForwardingServerBuilder.java  InternalChannelz.java  NameResolver.java  ServerBuilder.java  ServerInterceptor.java  ServerInterceptor2.java  ServerMethodDefinition.java
benchmarks/: build.gradle
benchmarks/src/jmh/java/io/grpc/internal/: Deframing.java
benchmarks/src/main/java/io/grpc/benchmarks/: Utils.java
buildscripts/kokoro/: bootstrap.json  create_mig.sh  delete_mig.sh  run_java_client.sh  test_pb2.py  test_pb2_grpc.py  xds.sh  xds_test.py  xds_test.sh
census/: build.gradle
census-explicit/: BUILD.bazel  build.gradle
census-explicit/src/main/java/io/grpc/census/: CensusTracingModule.java  Interceptors.java
census/src/main/java/io/grpc/census/: InternalCensusStatsAccessor.java
compiler/src/java_plugin/cpp/: java_generator.cpp
compiler/src/test/golden/: TestService.java.txt
compiler/src/testLite/golden/: TestService.java.txt
compiler/src/testNano/golden/: TestService.java.txt
context/src/main/java/io/grpc/: Context.java
core/src/jmh/java/io/grpc/internal/: StatsTraceContextBenchmark.java
core/src/main/java/io/grpc/: AbstractServiceDescriptor.java  ClientCall.java  ForwardingChannelBuilder.java  ManagedChannel.java  ManagedChannelBuilder.java  PartialForwardingServerCall.java  PickFirstBalancerFactory.java  ServerCall.java  ServerServiceDefinition.java  ServiceDescriptor.java
core/src/main/java/io/grpc/inprocess/: InProcessTransport.java
core/src/main/java/io/grpc/internal/: AbstractClientStream.java  AbstractClientStream2.java  AbstractManagedChannelImplBuilder.java  AbstractServerStream.java  AbstractStream.java  AbstractStream2.java  ApplicationThreadDeframer.java  ClientCallImpl.java  ClientStreamListener.java  CompositeBuffer.java  CompositeReadableBuffer.java  CompressedStreamFramer.java  DelayedClientTransport.java  DelayedStream.java  DnsNameResolver.java  Framer.java  FullStreamCodec.java  GZipInflatingBuffer.java  GrpcUtil.java  GzipInflatingBuffer.java  GzipInflatingCompositeBuffer.java  GzipStreamDeframer.java  Http2ClientStreamTransportState.java  InUseStateAggregator.java  ManagedChannelImpl.java  ManagedChannelOrphanWrapper.javaUpdated  ManagedChannelServiceConfig.java  MessageDeframer.java  MessageFramer.java  NoopClientStream.java  ServerCallImpl.java  ServerImpl.java  ServerImplBuilder.java  ServerStream.java  ServerStreamListener.java  ServiceConfigInterceptor.java  ServiceConfigUtil.java  StatsTraceContext.java  StatsTraceContextImpl.java  Stream.java  (+2 more)
core/src/main/java/io/grpc/util/: TransmitStatusRuntimeExceptionInterceptor.java
core/src/test/java/io/grpc/: ServerInterceptorsTest.java
core/src/test/java/io/grpc/internal/: AbstractClientStream2Test.java  AbstractClientStreamTest.java  AbstractManagedChannelImplBuilderTest.java  AbstractServerStreamTest.java  AbstractStreamTest.java  AbstractTransportTest.java  ClientCallImplTest.java  DelayedStreamTest.java  GZipInflatingBufferTest.java  GzipInflatingBufferTest.java  Http2ClientStreamTransportStateTest.java  ManagedChannelImplBuilderTest.java  ManagedChannelImplTest.java  MessageDeframerTest.java  MessageDeframerTest.javaDISABLED  MessageFramerTest.java  NoopClientStreamListener.java  ServerCallImplTest.java  ServerImplBuilderTest.java  ServerImplTest.java
cronet/src/test/java/io/grpc/cronet/: CronetClientStreamTest.java
examples/: build.gradle  logging.properties
examples/android/MyCppApp/app/: CMakeLists.txt  build.gradle
examples/android/MyCppApp/app/src/androidTest/java/com/example/ericgribkoff/mycppapp/: ExampleInstrumentedTest.java
examples/android/MyCppApp/app/src/main/: AndroidManifest.xml
examples/android/MyCppApp/app/src/main/cpp/: native-lib.cpp
examples/android/MyCppApp/app/src/main/java/com/example/ericgribkoff/mycppapp/: MainActivity.java
examples/android/MyCppApp/app/src/main/res/layout/: activity_main.xml  content_main.xml
examples/android/MyCppApp/app/src/main/res/menu/: menu_main.xml
examples/android/MyCppApp/app/src/main/res/values/: strings.xml
examples/android/MyCppApp/app/src/test/java/com/example/ericgribkoff/mycppapp/: ExampleUnitTest.java
examples/android/MyCppApp/gradle/wrapper/: gradle-wrapper.properties
examples/android/MyCppApp/protobuf/cmake/: libprotoc.cmake  protoc.cmake
examples/android/MyCppApp/protobuf/src/google/protobuf/: unittest_custom_options.pb.cc  unittest_custom_options.pb.h  unittest_proto3_arena.pb.cc  unittest_proto3_arena.pb.h
examples/android/clientcache/app/release/: app-release.apk  output.json
examples/android/helloworld/: read  size.sh
examples/android/helloworld/app/: build.gradle  proguard-rules.pro
examples/android/helloworld/app/release/: output.json
examples/android/helloworld/app/src/main/: AndroidManifest.xml
examples/android/routeguide/app/release/: output.json
examples/src/main/proto/: helloworld.proto  other_types.proto  parallel_other_types.proto  third_level.proto
interop-testing/: build.gradle  logging.properties
netty/src/main/java/io/grpc/netty/: NettyClientStream.java  NettyClientTransport.java  NettyServerHandler.java  NettyServerStream.java
netty/src/test/java/io/grpc/netty/: NettyClientHandlerTest.java  (+7 more)
protobuf/: build.gradle
protobuf/src/main/proto/: helloworld.proto  other_types.proto  reflection_test_1.proto  third_level.proto
services/: build.gradle
services/src/main/proto/: helloworld.proto  stats.proto
xds/example-xds/: build.gradle
(+74 files in other folders)
